fixed alignment issues

--- a/main.css
+++ b/main.css
@@ -8,8 +8,7 @@ body {
   height: 100%;
   color: var(--fontColor);
   background-attachment: fixed;
-  font-family: 'Trebuchet MS';
-  text-align: left;
+  font-family: "Chakra Petch", sans-serif;
 }
 div {
   text-align: left;
@@ -22,29 +21,46 @@ div {
 }
 h1 {
   padding-bottom: 50px;
-  font-size: 35pt;
+  font-size: 50pt;
   text-align: center;
+  margin-right: 50px;
+  
 }
 a {
-  padding-right: 5%;
+  padding-right: 2%;
   text-decoration: none;
+  text-align: center;
 }
+.center {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  height:100px;
+  width: auto;
+ }
+ #images {
+  text-align: center;
+ }
+
 p {
   text-align: left;
+  padding-bottom: 200px;
+  font-size: 16pt;
 }
 /* Dropdown Button */
 .dropbtn {
-  background-color: #ea3391;
+  background-color: #c82c7d;
   color: white;
   padding: 16px;
   font-size: 16px;
+  color: var(--black);
   border: none;
   cursor: pointer;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #dc2e91;
+  background-color: #a3216b;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -78,3 +94,64 @@ p {
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
+.chakra-petch-light {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.chakra-petch-regular {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.chakra-petch-medium {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.chakra-petch-semibold {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.chakra-petch-bold {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.chakra-petch-light-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.chakra-petch-regular-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.chakra-petch-medium-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.chakra-petch-semibold-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.chakra-petch-bold-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
